fix: padding issues on small screen sizes

--- a/client/src/views/NotesView/DnD/dragAndDrop.module.css
+++ b/client/src/views/NotesView/DnD/dragAndDrop.module.css
@@ -37,10 +37,10 @@
 
 @media only screen and (max-width: 600px) {
     .scroll {
+        width: fit-content;
         margin-top: 15px;
-        margin-left: 7px;
+        margin-left: 0px;
         margin-right: 0px;
-        width: 100%;
     }
 }
 
@@ -55,8 +55,8 @@
 }
 @media only screen and (max-width: 600px) {
     .dndContainer {
+        width: fit-content;
         padding-left: 0px;
-        width: 100%;
     }
 }
 
