--- a/client/src/views/NotesView/NewNote/NewNote.module.css
+++ b/client/src/views/NotesView/NewNote/NewNote.module.css
@@ -13,7 +13,8 @@
 @media only screen and (max-width: 600px) {
     .container {
         margin-top: 4.2rem;
-        margin-left: 15px;
+        margin-left: 0px;
+        padding-right: 0.5rem;
     }
     .segment {
         min-width: 210px;
