--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -52,6 +52,11 @@
     justify-content: flex-start;
     width: 100%;
 }
+@media only screen and (max-width: 550px) {
+    .notes {
+        align-items: center;
+    }
+}
 
 @media only screen and (max-width: 1050px) {
     .notes {
